Prepare resources to use a ViewPager for download details

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -6,4 +6,7 @@
         format="reference" />
     <attr name="background_card_pressed"
         format="reference" />
+    <attr name="pager_tab_strip_bg"
+        format="reference" />
+
 </resources>
