--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -8,16 +8,19 @@
     <color name="list_header">#ff0099cc</color>
     <color name="secondary_text">#d5d5d5</color>
     <color name="module_warning">#ff0000</color>
+    <color name="pager_tab_strip">#fff</color>
 
     <!-- light theme-->
     <color name="app_background_light">#e5e5e5</color>
     <color name="card_background_light">#fff</color>
     <color name="card_background_pressed_light">#dfdfdf</color>
     <color name="card_shadow_light">#dbdbdb</color>
+    <color name="pager_tab_strip_bg_light">#222</color>
 
     <!-- dark theme -->
     <color name="card_background_dark">#292929</color>
     <color name="card_background_pressed_dark">#464646</color>
     <color name="card_shadow_dark">#111</color>
+    <color name="pager_tab_strip_bg_dark">#222</color>
 
 </resources>
