--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -22,15 +22,22 @@
             android:summary="@string/settings_enable_downloads_summary"
             android:title="@string/settings_enable_downloads" />
     </PreferenceCategory>
-<!--
+
     <PreferenceCategory
         android:key="group_experimental"
         android:title="@string/settings_group_experimental" >
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="disable_resources"
+            android:persistent="false"
+            android:summary="@string/settings_disable_resources_summary"
+            android:title="@string/settings_disable_resources" />
+<!--
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="performance_experiment"
             android:summary="@string/settings_performance_experiment_summary"
             android:title="@string/settings_performance_experiment" />
-    </PreferenceCategory>
 -->
+    </PreferenceCategory>
 </PreferenceScreen>
