Add background for installation mode text
This should give at least a little hint that it is clickable. Surely not
best solution, but better than nothing. This will become obsolete with a
redesign soon anyway.

The image is the old AOSP toast background with reduced padding.

--- a/res/layout/tab_installer.xml
+++ b/res/layout/tab_installer.xml
@@ -84,6 +84,7 @@
         </TableLayout>
 
         <TextView
+            android:background="@drawable/text_button"
             android:id="@+id/framework_install_mode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
