Add category headers and make install mode a button

--- a/res/layout/tab_installer.xml
+++ b/res/layout/tab_installer.xml
@@ -13,8 +13,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="8dp"
             android:stretchColumns="0,1,2" >
 
             <TableRow
@@ -90,20 +89,35 @@
         </TableLayout>
 
         <TextView
-            android:background="@drawable/text_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:text="@string/settings_install_mode" />
+
+        <Button
             android:id="@+id/framework_install_mode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/framework_install_errors"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="8dp"
             android:textStyle="bold"
             android:textColor="@color/warning"
             android:visibility="gone" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:text="@string/tabInstall" />
 
         <Button
             android:id="@+id/btnInstall"
@@ -115,13 +129,21 @@
             android:id="@+id/btnUninstall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:text="@string/uninstall" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:text="@string/install_header_reboot" />
 
         <Button
             android:id="@+id/btnSoftReboot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:text="@string/soft_reboot" />
 
         <Button
