--- a/res/layout/tab_installer.xml
+++ b/res/layout/tab_installer.xml
@@ -96,6 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
+            android:textColor="@color/warning"
             android:visibility="gone" />
 
         <Button
