--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -9,6 +9,8 @@
         <item name="background_card">@drawable/background_card_light</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_light</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_light</item>
+        <item name="text_important">@android:color/holo_red_light</item>
+        <item name="download_status_installed">@android:color/holo_orange_dark</item>
     </style>
 
     <style
@@ -17,6 +19,8 @@
         <item name="background_card">@drawable/background_card_dark</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_dark</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_dark</item>
+        <item name="text_important">@android:color/holo_orange_light</item>
+        <item name="download_status_installed">@android:color/holo_orange_light</item>
     </style>
 
 </resources>
