--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -18,4 +18,14 @@
         <item>2</item>
     </string-array>
 
+    <string-array name="theme_texts" translatable="false">
+        <item>@string/settings_theme_light</item>
+        <item>@string/settings_theme_dark</item>
+    </string-array>
+
+    <string-array name="theme_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
