--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -21,11 +21,13 @@
     <string-array name="theme_texts" translatable="false">
         <item>@string/settings_theme_light</item>
         <item>@string/settings_theme_dark</item>
+        <item>@string/settings_theme_black</item>
     </string-array>
 
     <string-array name="theme_values" translatable="false">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </string-array>
 
 </resources>
