Replace branch with release type

--- a/res/layout/list_item_version.xml
+++ b/res/layout/list_item_version.xml
@@ -20,7 +20,7 @@
             android:textIsSelectable="false" />
 
         <TextView
-            android:id="@+id/txtBranch"
+            android:id="@+id/txtRelType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
