Module-specific settings (for now: release type selection)

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -42,4 +42,18 @@
         <item>experimental</item>
     </string-array>
 
+    <string-array name="module_release_type_texts" translatable="false">
+        <item>@string/reltype_use_global_summary</item>
+        <item>@string/reltype_stable_summary</item>
+        <item>@string/reltype_beta_summary</item>
+        <item>@string/reltype_experimental_summary</item>
+    </string-array>
+
+    <string-array name="module_release_type_values" translatable="false">
+        <item></item>
+        <item>stable</item>
+        <item>beta</item>
+        <item>experimental</item>
+    </string-array>
+
 </resources>
