--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="warning">@android:color/holo_red_light</color>
     <color name="warning_box">@android:color/holo_red_dark</color>
     <color name="pager_tab_strip">#fff</color>
+    <color name="download_details_title">#777</color>
     <color name="download_status_update_available">@color/darker_green</color>
     <color name="welcome_framework_update_available">@color/download_status_update_available</color>
     <color name="welcome_update_available">@color/download_status_update_available</color>
