Make app_name untranslatable
Names should usually not be translated. I often refer to "Xposed
Installer" on XDA, so it should be clear what I'm talking about.

Additionally, in some languages, the order of the words was changed, so
the app didn't appear at letter X, where users would expect it.

--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name">Xposed Installer</string>
     <string name="app_process">app_process</string>
     <string name="xposedbridge">XposedBridge.jar</string>
     <string name="none">---</string>
