--- a/res/layout/download_moreinfo.xml
+++ b/res/layout/download_moreinfo.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
     android:background="?attr/background_card"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    tools:ignore="Overdraw" >
 
     <TextView
         android:id="@android:id/title"
