reasonable big hitbox of checkbox  - additionally it leafes space for scroller  - fits fingers of people older than 10 years :D

--- a/res/layout/list_item_module.xml
+++ b/res/layout/list_item_module.xml
@@ -64,6 +64,7 @@
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+		android:padding="15dp"
         android:gravity="top"
         android:focusable="false" />
 
