--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
 
-    <!-- Set parent themes to Material or Material.Light under Lollipop (API 21).
-     Lower API levels (from 15 - ICS to 19 - KK) will still use Holo. -->
+    <!-- Material themes for Lollipop. -->
 
     <style
-        name="Theme.Dark"
-        parent="android:Theme.Material">
-        <item name="background_card">@drawable/background_card_dark</item>
-        <item name="background_card_pressed">@drawable/background_card_pressed_dark</item>
-        <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_dark</item>
-        <item name="text_important">@android:color/holo_orange_light</item>
-        <item name="download_status_installed">@android:color/holo_orange_light</item>
+        name="Theme.Light"
+        parent="android:Theme.Material.Light.DarkActionBar" >
+        <item name="android:windowBackground">@color/app_background_light</item>
+        <item name="background_card">@drawable/background_card_light</item>
+        <item name="background_card_pressed">@drawable/background_card_pressed_light</item>
+        <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_light</item>
+        <item name="pager_tab_strip_bottom_bg">@color/pager_tab_strip_bottom_bg_light</item>
+        <item name="text_important">@android:color/holo_red_light</item>
+        <item name="download_status_installed">@android:color/holo_orange_dark</item>
+        <item name="download_details">@color/download_details_light</item>
         <item name="android:colorPrimary">#ff03a9f4</item>
         <item name="android:colorPrimaryDark">#ff0288d1</item>
         <item name="android:colorAccent">#ff03a9f4</item>
     </style>
 
     <style
-        name="Theme.Light"
-        parent="android:Theme.Material.Light.DarkActionBar">
-        <item name="android:windowBackground">@color/app_background_light</item>
-        <item name="background_card">@drawable/background_card_light</item>
-        <item name="background_card_pressed">@drawable/background_card_pressed_light</item>
-        <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_light</item>
-        <item name="text_important">@android:color/holo_red_light</item>
-        <item name="download_status_installed">@android:color/holo_orange_dark</item>
+        name="Theme.Dark"
+        parent="android:Theme.Material" >
+        <item name="background_card">@drawable/background_card_dark</item>
+        <item name="background_card_pressed">@drawable/background_card_pressed_dark</item>
+        <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_dark</item>
+        <item name="pager_tab_strip_bottom_bg">@color/pager_tab_strip_bottom_bg_dark</item>
+        <item name="text_important">@android:color/holo_orange_light</item>
+        <item name="download_status_installed">@android:color/holo_orange_light</item>
+        <item name="download_details">@color/download_details_dark</item>
         <item name="android:colorPrimary">#ff03a9f4</item>
         <item name="android:colorPrimaryDark">#ff0288d1</item>
         <item name="android:colorAccent">#ff03a9f4</item>
@@ -36,8 +40,11 @@
         <item name="android:windowBackground">@color/app_background_black</item>
         <item name="background_card">@drawable/background_card_black</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_black</item>
+        <item name="pager_tab_strip_bottom_bg">@color/pager_tab_strip_bottom_bg_dark</item>
+        <item name="download_details">@color/download_details_dark</item>
         <item name="android:colorPrimary">#ff333333</item>
         <item name="android:colorPrimaryDark">#ff212121</item>
         <item name="android:colorAccent">#ff9e9e9e</item>
     </style>
+
 </resources>
