--- a/res/layout/activity_download_details.xml
+++ b/res/layout/activity_download_details.xml
@@ -24,13 +24,13 @@
         android:id="@android:id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/pager_tab_strip_bg"
+        android:background="?attr/pager_tab_strip_bottom_bg"
         android:ellipsize="end"
         android:gravity="center"
         android:padding="4dp"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/download_details_title"
+        android:textColor="?attr/download_details"
         android:textStyle="italic" />
 
 </LinearLayout>
