--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,9 +2,13 @@
 
 <resources>
 
-    <style
+    <style name="Theme.Base.Light" parent="android:Theme.Holo.Light.DarkActionBar" />
+    <style name="Theme.Base.Dark" parent="android:Theme.Holo" />
+
+	
+	<style
         name="Theme.Light"
-        parent="android:Theme.Holo.Light.DarkActionBar" >
+        parent="@style/Theme.Base.Light" >
         <item name="android:windowBackground">@color/app_background_light</item>
         <item name="background_card">@drawable/background_card_light</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_light</item>
@@ -15,7 +19,7 @@
 
     <style
         name="Theme.Dark"
-        parent="android:Theme.Holo" >
+        parent="@style/Theme.Base.Dark" >
         <item name="background_card">@drawable/background_card_dark</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_dark</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_dark</item>
@@ -24,7 +28,7 @@
     </style>
 
     <style
-        name="Theme.Dark.Black" >
+        name="Theme.Dark.Black" parent="@style/Theme.Dark" >
         <item name="android:windowBackground">@color/app_background_black</item>
         <item name="background_card">@drawable/background_card_black</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_black</item>
