--- a/app/src/main/res/layout/list_item_welcome.xml
+++ b/app/src/main/res/layout/list_item_welcome.xml
@@ -6,6 +6,7 @@
     android:paddingBottom="4dp"
     android:paddingLeft="6dp"
     android:paddingRight="6dp"
+    android:layout_marginTop="?attr/actionBarSize"
     android:minHeight="?android:attr/listPreferredItemHeight" >
 
     <TextView
