--- a/app/src/main/res/layout/tab_installer.xml
+++ b/app/src/main/res/layout/tab_installer.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize" >
 
     <LinearLayout
         android:layout_width="match_parent"
