--- a/app/src/main/res/layout/tab_logs.xml
+++ b/app/src/main/res/layout/tab_logs.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/svLog"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize" >
 
     <HorizontalScrollView
         android:id="@+id/hsvLog"
