--- a/app/src/main/res/layout/activity_download_details.xml
+++ b/app/src/main/res/layout/activity_download_details.xml
@@ -7,8 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/toolbar_elevation"
-        android:layout_marginBottom="?attr/actionBarSize" >
+        android:elevation="@dimen/toolbar_elevation" >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -30,6 +29,7 @@
         android:id="@+id/download_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="?attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <TextView
