global: implement new stickyheaders library

--- a/app/src/main/res/layout/tab_downloader.xml
+++ b/app/src/main/res/layout/tab_downloader.xml
@@ -7,14 +7,13 @@
     android:layout_marginTop="?attr/actionBarSize"
     tools:context=".DownloadFragment" >
 
-    <com.emilsjolander.components.stickylistheaders.StickyListHeadersListView
+    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/listModules"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dip"
         android:clipToPadding="false"
         android:divider="@android:color/transparent"
-        android:dividerHeight="6dip" >
-    </com.emilsjolander.components.stickylistheaders.StickyListHeadersListView>
+        android:dividerHeight="6dip" />
 
 </LinearLayout>
