--- a/app/src/main/res/layout/list_item_download.xml
+++ b/app/src/main/res/layout/list_item_download.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list_item_download"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dip"
-    android:background="?attr/background_card" >
+    android:background="@android:color/white"
+    android:foreground="?android:attr/selectableItemBackground" >
 
-    <TextView
-        android:id="@android:id/text1"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceListItem" />
+        android:padding="16dip" >
 
-    <TextView
-        android:id="@android:id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@android:id/text1"
-        android:layout_below="@android:id/text1"
-        android:layout_marginBottom="8dip"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        <TextView
+            android:id="@android:id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceListItem" />
 
-    <TextView
-        android:id="@+id/downloadStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@android:id/text2"
-        android:layout_below="@android:id/text2"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:visibility="gone" />
+        <TextView
+            android:id="@android:id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@android:id/text1"
+            android:layout_below="@android:id/text1"
+            android:layout_marginBottom="8dip"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <TextView
-        android:id="@+id/timestamps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@android:id/text2"
-        android:layout_below="@id/downloadStatus"
-        android:textColor="@android:color/tertiary_text_dark"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        <TextView
+            android:id="@+id/downloadStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@android:id/text2"
+            android:layout_below="@android:id/text2"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/timestamps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@android:id/text2"
+            android:layout_below="@id/downloadStatus"
+            android:textColor="@android:color/tertiary_text_dark"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </RelativeLayout>
+</FrameLayout>
