--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,14 +14,16 @@
     <color name="welcome_update_available">@color/download_status_update_available</color>
     <color name="darker_green">#ff22aa00</color>
 
+
     <!-- light theme-->
-    <color name="app_background_light">#e5e5e5</color>
+    <color name="background_material_light">#ffeeeeee</color>
     <color name="card_background_light">#fff</color>
     <color name="card_background_pressed_light">#dfdfdf</color>
     <color name="card_shadow_light">#dbdbdb</color>
     <color name="pager_tab_strip_bg_light">#222</color>
 
     <!-- dark theme -->
+    <color name="background_material_dark">#ff303030</color>
     <color name="card_background_dark">#363636</color>
     <color name="card_background_pressed_dark">#505050</color>
     <color name="card_shadow_dark">#161616</color>
