--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.XposedManager" parent="Theme.XposedManager.Base">
+    <style name="Theme.XposedInstaller" parent="Theme.XposedInstaller.Base">
     </style>
 
     <!-- Base application theme. -->
-    <style name="Theme.XposedManager.Base" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.XposedInstaller.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style
-        name="Theme.Light"
+        name="Theme.XposedInstaller.Light"
         parent="Theme.XposedManager" >
-        <item name="android:windowBackground">@color/app_background_light</item>
+        <item name="android:windowBackground">@color/background_material_light</item>
         <item name="background_card">@drawable/background_card_light</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_light</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_light</item>
@@ -23,8 +23,9 @@
     </style>
 
     <style
-        name="Theme.Dark"
+        name="Theme.XposedInstaller.Dark"
         parent="Theme.XposedManager" >
+        <item name="android:windowBackground">@color/background_material_dark</item>
         <item name="background_card">@drawable/background_card_dark</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_dark</item>
         <item name="pager_tab_strip_bg">@color/pager_tab_strip_bg_dark</item>
@@ -33,7 +34,7 @@
     </style>
 
     <style
-        name="Theme.Dark.Black" >
+        name="Theme.XposedInstaller.Dark.Black" >
         <item name="android:windowBackground">@color/app_background_black</item>
         <item name="background_card">@drawable/background_card_black</item>
         <item name="background_card_pressed">@drawable/background_card_pressed_black</item>
